tests/script/negative/undefinedness/case.out
Variable "x" undefined at:
  - line 7:12
Variable "y" undefined at:
  - line 8:10
Variable "z" undefined at:
  - line 7:3
Stack trace leading up to error:
   f : {initial} -> {terminal}
